k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hoto
  annotations:
    cloud.spanda.io/version: v0.1.0-master-3.f12e602
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoto
  labels:
    app: hoto
  namespace: hoto
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: hoto
  template:
    metadata:
      labels:
        app: hoto
    spec:
      containers:
      - name: hoto
        image: spanda/hoto
        env: []
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hoto
  labels:
    app: hoto
  namespace: hoto
spec:
  type: NodePort
  ports:
    - port: 4000
      protocol: TCP
      name: http
      targetPort: 4000
  selector:
    app: hoto
